--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,3 @@
-
 name: Selenium Java CI
 
 on:
@@ -6,19 +5,27 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+permissions:
+  id-token: write
+  contents: read
+  checks: write
 jobs:
-  build:
-
+  e2e:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
     - name: Test
-      run: mvn clean test 
+      run: mvn clean test
+    - name: Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: Test Results
+        path: ${{ github.workspace }}/target/surefire-reports/TEST-*.xml
+        reporter: java-junit
