--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,5 +20,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Clear Maven Cache
+      run: rm -rf ~/.m2/repository
     - name: Test
       run: mvn clean test
